--- a/src/es/components/organisms/footer/default-/default-.css
+++ b/src/es/components/organisms/footer/default-/default-.css
@@ -6,5 +6,6 @@
   --footer-default-invert-background-color: var(--footer-default-invert-background-color-custom, var(--color-secondary));
   --footer-default-invert-color: var(--footer-default-invert-color-custom, var(--background-color));
   --picture-footer-logo-img-width: min(35px, 10vw);
-  --picture-store-logo-text-align: left;
+  --picture-store-logo-img-margin-mobile: var(--picture-store-logo-img-margin);
+  --picture-store-logo-img-margin: 0;
 }
